# Diablo IV Collection Log

A web app that allows Diablo IV players keep track of their Transmog
collections.

## [1.10.5] - 2024-11-05

### Added

- "Macabre Celebration" collection to Tejal's Gifts
- "Celebrated" title, Khazra Helm and Boots to the Citadel challenge collection

### Fixed

- Name of the "Malefic Gaze" 1h sword
- Icon of the "Demigod Caster"
- Missing "Asheara" and "Alkor" pets

## [1.10.4] - 2024-10-28

### Fixed

- Moved "Undercity Temple Barding" to zone collection
- Consistent unique/mythic descriptions using the "Salvaged from..." template
- Punctuation of "Sanctuary" in item descriptions

## [1.10.3] - 2024-10-27

### Added

- 5x Spiritborn unique armor transmogs
- "The Hateful Stone" challenge reward for Paragon 300
- "Undercity Temple Barding" to the Dark Citadel collection

### Updated

- Descriptions of various quest items
- Descriptions of the "Nahantu Veilwalker" VoH pre-order set

### Fixed

- Support a Streamer #2 heading
- Duplicate "Hooked Piercer" in the Dark Citadel collection
- Missing pets from the Software Purchase > VoH collection

## [1.10.2] - 2024-10-18

### Added

- "Nahantu Veilwalker" armor set added
- "Dark Leopard" and "Scion of Hatred Barding" main quest rewards

### Updated

- Merged Dark Citadel vendor items into Raid Drops
- Description of "Hooked Piercer" to include vendor price
- Description of Urivar's helm + sword as quest rewards

### Removed

- "Leucistic Lion" from vendor collection

## [1.10.1] - 2024-10-18

### Added

- Warcraft Legends II shop collections
- Rebel's Cache weapon pack collection
- "Leucistic Panther" to vendor collection

### Updated

- Site fonts are now "PT Serif" and "Ubuntu"

### Fixed

- Missing "Demonbinder" icon

### Known Issues

- "Demigod Caster" wand has a [PH] icon
- "Scales of the Dead Sea" mount armor icon missing

## [1.10.0] - 1024-10-17

### Added

- Season of Hatred Rising collections
- Challenge rewards added in Vessel of Hatred
- Discord Quest promotional collection